--- a/.config/waybar/wallust/colors-waybar.css
+++ b/.config/waybar/wallust/colors-waybar.css
@@ -1,23 +1,23 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
-@define-color foreground #F5F1F7;
-@define-color background rgba(26,28,30,0.25);
-@define-color cursor #F5F1F7;
+@define-color foreground #E8E9EA;
+@define-color background rgba(18,19,19,0.25);
+@define-color cursor #E8E9EA;
 
-@define-color color0 #414244;
-@define-color color1 #10151D;
-@define-color color2 #39223D;
-@define-color color3 #076372;
-@define-color color4 #8E4C7D;
-@define-color color5 #06ADAD;
-@define-color color6 #A9A1AD;
-@define-color color7 #E8E3EB;
-@define-color color8 #A29FA4;
-@define-color color9 #151C26;
-@define-color color10 #4C2E51;
-@define-color color11 #098498;
-@define-color color12 #BD66A7;
-@define-color color13 #08E6E7;
-@define-color color14 #E1D7E7;
-@define-color color15 #E8E3EB;
+@define-color color0 #3A3A3B;
+@define-color color1 #462427;
+@define-color color2 #383F4B;
+@define-color color3 #8A3D41;
+@define-color color4 #A7474C;
+@define-color color5 #56926D;
+@define-color color6 #8E9192;
+@define-color color7 #D6D8D8;
+@define-color color8 #959797;
+@define-color color9 #5D3034;
+@define-color color10 #4A5464;
+@define-color color11 #B85156;
+@define-color color12 #DF5F65;
+@define-color color13 #73C291;
+@define-color color14 #BDC1C2;
+@define-color color15 #D6D8D8;
