--- a/.config/waybar/wallust/colors-waybar.css
+++ b/.config/waybar/wallust/colors-waybar.css
@@ -1,23 +1,23 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
-@define-color foreground #C5D6D2;
-@define-color background rgba(0,1,2,0.25);
-@define-color cursor #C5D6D2;
+@define-color foreground #F6E0D9;
+@define-color background rgba(23,24,30,0.25);
+@define-color cursor #F6E0D9;
 
-@define-color color0 #000102;
-@define-color color1 #2B2E31;
-@define-color color2 #283234;
-@define-color color3 #48292B;
-@define-color color4 #732322;
-@define-color color5 #3B5953;
-@define-color color6 #42675E;
-@define-color color7 #A3BCB6;
-@define-color color8 #72837F;
-@define-color color9 #393D41;
-@define-color color10 #354346;
-@define-color color11 #603739;
-@define-color color12 #992E2D;
-@define-color color13 #4F766E;
-@define-color color14 #58897D;
-@define-color color15 #A3BCB6;
+@define-color color0 #3E3F46;
+@define-color color1 #041129;
+@define-color color2 #46172B;
+@define-color color3 #204468;
+@define-color color4 #834754;
+@define-color color5 #317089;
+@define-color color6 #AC7D6E;
+@define-color color7 #EACAC1;
+@define-color color8 #A38D87;
+@define-color color9 #051737;
+@define-color color10 #5D1E3A;
+@define-color color11 #2B5A8B;
+@define-color color12 #AF5F70;
+@define-color color13 #4195B7;
+@define-color color14 #E5A693;
+@define-color color15 #EACAC1;
