--- a/.config/waybar/wallust/colors-waybar.css
+++ b/.config/waybar/wallust/colors-waybar.css
@@ -1,23 +1,23 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
-@define-color foreground #F6E0D9;
-@define-color background rgba(23,24,30,0.25);
-@define-color cursor #F6E0D9;
+@define-color foreground #D5E9EF;
+@define-color background rgba(0,0,4,0.25);
+@define-color cursor #D5E9EF;
 
-@define-color color0 #3E3F46;
-@define-color color1 #041129;
-@define-color color2 #46172B;
-@define-color color3 #204468;
-@define-color color4 #834754;
-@define-color color5 #317089;
-@define-color color6 #AC7D6E;
-@define-color color7 #EACAC1;
-@define-color color8 #A38D87;
-@define-color color9 #051737;
-@define-color color10 #5D1E3A;
-@define-color color11 #2B5A8B;
-@define-color color12 #AF5F70;
-@define-color color13 #4195B7;
-@define-color color14 #E5A693;
-@define-color color15 #EACAC1;
+@define-color color0 #000004;
+@define-color color1 #232830;
+@define-color color2 #272E37;
+@define-color color3 #40555F;
+@define-color color4 #405776;
+@define-color color5 #5E838E;
+@define-color color6 #66909C;
+@define-color color7 #BBD7DF;
+@define-color color8 #83969C;
+@define-color color9 #2F3540;
+@define-color color10 #353E49;
+@define-color color11 #56727F;
+@define-color color12 #55749E;
+@define-color color13 #7DAFBE;
+@define-color color14 #88C0D0;
+@define-color color15 #BBD7DF;
